chore: Add go based mini app
This is to play with k8s configs

--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@nrwl/nx-cloud": "latest",
     "@nrwl/webpack": "15.9.2",
     "@nrwl/workspace": "15.9.2",
+    "@nx-go/nx-go": "^2.7.0",
+    "@nxlv/python": "^15.10.0",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
